--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "18.2.0",
     "@supabase/supabase-js": "^2.38.5",
     "xlsx": "^0.18.5",
-    "formidable"^2.1.1"
+   "formidable": "^2.1.1"
     
   }
 }
